Fix CI findings: formatting, Modernizer, dead doc link
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RswMTaRvsuLLMJfCaWJetY